# ditherui

./: Cargo.toml  README.md
data/corrupt/: first-test.tiff
src/: effect.rs  image.rs  lib.rs  main.rs
src/colour/: algorithms.rs  colours.rs  comparisons.rs  conversions.rs  gradient.rs  mix.rs  mod.rs  palettes.rs  pixel.rs  utils.rs
src/colour/pixel/: hsl.rs  mod.rs  mono.rs  rgb.rs
src/corrupt/: methods.rs
src/databend/: bytes.rs
src/dither/: algorithms.rs  algorithms.rs.old  atkinson.rs  basic.rs  bayer.rs  burkes.rs  error.rs  errorpropagate.rs  floydsteinberg.rs  jarvisjudiceninke.rs  mod.rs  palettes.rs  pixel.rs  sierra.rs  stucki.rs
src/filter/: algorithms.rs  direct.rs  mod.rs  raw.rs
src/pixel/: comparisons.rs  conversions.rs  hsl.rs  lab.rs  lch.rs  mod.rs  mono.rs  oklab.rs  oklch.rs  rgb.rs
src/utils/: image.rs  mod.rs  numops.rs  u8ops.rs
