[package]
name = "image-filters"
description = "An assortment of filters that can be applied to an image. Uses the 'image' crate."
version = "0.1.0"
license = "MPL-2.0"
readme = "README.md"
keywords = ["image", "filters", "dither"]
categories = ["multimedia::images"]
authors = ["enbyss"]
edition = "2021"
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
num = "0.4.1" # may not be used
ndarray = "0.15.6"
once_cell = "1.18.0"
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
palette = "0.7.2"
